# varengold_dbt_case

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  onCreateCommand.sh
docs/: findings_explo.md
notebooks/: data_exploration.ipynb  upt_explo.ipynb
src/dbt_case/: __init__.py  show_schemas.py
src/dbt_case/data_exploration/: __init__.py  data_cleaner.py  data_quality.py  descriptive_stats.py  id_analyzer.py  outlier_detection.py  plotting.py  relationship_validator.py  utils.py
transformation/: dbt_project.yml
transformation/data_catalogue/: catalog.json
transformation/models/reporting/: customer_transactions_summary.sql  schema.yml
