[project]
name = "dbt-case"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Victor Staack", email = "victor.staack@proton.me" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
dbt-case = "dbt_case:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
